fix(css): tab container too high

--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -47,7 +47,7 @@
 /* Bottom menu */
 #tabContainer {
   position: absolute;
-  top: calc(100% - 72px - var(--safe-area-inset-bottom));
+  top: calc(100% - 72px - max(calc(var(--safe-area-inset-bottom) - 10px), 0px));
   height: fit-content;
   width: 100%;
   background-color: #f4f6f8;
